[package]
name = "easy_stats"
version = "0.1.0"
edition = "2021"
description = "A simple rust package to perform basic descriptive stats on a data set."
license = "MIT OR Apache-2.0"
repository = "https://github.com/masaimahapa/rust-stats"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
